test/libsolidity/syntaxTests/contractBaseLocation/layout_statement_without_at.sol
contract C layout { }
// ----
// ParserError 1994: (18-19): Expected 'at' but got '{'
// ParserError 6933: (20-21): Expected primary expression.
